syntax = "proto3";

package ticker;
option go_package = "github.com/dimryb/cross-arb/proto";

// Сообщение для одного тикера
message TickerData {
  string symbol = 1;
  string exchange = 2;
  double bid_price = 3;
  double bid_qty = 4;
  double ask_price = 5;
  double ask_qty = 6;
}

// Запрос на стрим
message SubscribeRequest {}

// Ответ — один тикер
message TickerUpdate {
  TickerData data = 1;
}

// Сервис для получения потока тикеров
service TickerService {
  // Серверный стрим: клиент подписывается, сервер отправляет поток
  rpc Subscribe(SubscribeRequest) returns (stream TickerUpdate);
}
